syntax = "proto3";

package computations;

import "geometry/geometry.proto";
import "scenes/scenes.proto";

service Computations {
    rpc CreateComputation (CreateComputationRequest) returns (ComputationStatus) {}
    rpc GetComputationStatus (GetComputationStatusRequest) returns (ComputationStatus) {}
}

message Computation {
    string id = 1;
    scenes.Scene scene = 2;
    string operator_id = 3;
    double time = 4;
    geometry.BoundingBox2D bounding_box = 5;
    string resource_id = 6; // Location in GCS
}

message ComputationStatus {
    string id = 1;
    string computation_id = 2;
    // TODO: Enum type?
    int32 status = 3;
    int64 created_at = 4;
}

message CreateComputationRequest {
    Computation computation = 1;
}

message GetComputationStatusRequest {
    string computation_id = 1;
}
